--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <style>
-    .nav-link {
+    .nav-link,
+    h2,
+    p {
       color: white;
     }
   </style>
 </head>
 
 <body style="background-color:black;">
-  <nav class="navbar navbar-expand-sm bg-dark my-3 mx-5 py-3 px-2 rounded-4">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark my-3 mx-5 py-3 px-2 rounded-4">
     <div class="container-fluid">
       <a class="navbar-brand" style="color:white;">iPhone Air</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -28,10 +30,10 @@
             <a class="nav-link active" aria-current="page" href="#overview">Overview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#features">Features</a>
+            <a class="nav-link" href="#gallery">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#gallery">Gallery</a>
+            <a class="nav-link" href="#specifications">Specifications</a>
           </li>
         </ul>
       </div>
@@ -42,6 +44,27 @@
   <section id="overview" class="text-center">
     <div class="container-fluid">
       <img src="images/air.png" alt="iPhone Air Overview" class="img-fluid">
+      <p class="px-5" style="text-align:justify; font-size: 1.2rem">
+        The iPhone 17 introduces a sleek new design with a 6.3-inch Super Retina XDR OLED display that supports
+        ProMotion up to 120 Hz and an Always-On feature. It runs on the powerful A19 chip, offering faster performance
+        and improved efficiency. The phone includes dual 48-megapixel rear cameras and an 18-megapixel front camera,
+        providing excellent photo and video quality. With iOS 26, larger base storage starting at 256 GB, and a
+        lightweight aluminum body, the iPhone 17 delivers premium features once reserved for “Pro” models.
+      </p>
+    </div>
+  </section>
+
+  <!-- Gallery Section -->
+  <section id="#gallery">
+    <div class="container-fluid">
+      
+    </div>
+  </section>
+
+  <!-- Specification Section -->
+  <section id="#gallery">
+    <div class="container-fluid">
+      
     </div>
   </section>
 
