--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     p {
       color: white;
     }
+
+    .styled-img {
+      height: 300px;
+      object-fit: contain;
+      width: 100%;
+    }
   </style>
 </head>
 
@@ -42,7 +48,7 @@
 
   <!-- Overview Section -->
   <section id="overview" class="text-center">
-    <div class="container-fluid">
+    <div class="container-fluid mb-5">
       <img src="images/air.png" alt="iPhone Air Overview" class="img-fluid">
       <p class="px-5" style="text-align:justify; font-size: 1.2rem">
         The iPhone 17 introduces a sleek new design with a 6.3-inch Super Retina XDR OLED display that supports
@@ -55,16 +61,119 @@
   </section>
 
   <!-- Gallery Section -->
-  <section id="#gallery">
-    <div class="container-fluid">
-      
+  <section id="gallery">
+
+    <div class="container-fluid text-center px-5">
+      <h2>
+        The thinnest iPhone ever made.
+      </h2>
+
+      <img src="images/thin.png" alt="thin" class="img-fluid styled-img">
+      <p class="mt-2 mb-4" style="text-align:justify; font-size: 1.2rem">
+        The iPhone Air’s ultra-thin design makes it incredibly lightweight and comfortable to carry anywhere. Despite
+        its slim build, it delivers impressive performance and a premium feel that enhances everyday use.
+      </p>
+
+      <div class="container-fluid mb-5">
+        <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+
+            <div class="carousel-item active px-5">
+              <div class="row align-items-center">
+                <div class="col-7">
+                  <img src="images/air1.png" alt="colors"
+                    style="width: 100%; height: 400px; padding: 15px; object-fit: contain;">
+                </div>
+                <div class="col-5 d-flex" style="text-align:left;">
+                  <h2>
+                    Available in 4 different colors.
+                  </h2>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item px-5">
+              <div class="row align-items-center px-1">
+                <div class="col-6">
+                  <img src="images/white.png" alt="white"
+                    style="width: 100%; height: 400px; padding: 15px; object-fit: contain;">
+                </div>
+                <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                  <h2>
+                    Cloud White
+                  </h2>
+                  <p>Clean and minimalist, ideal for a simple yet elegant appearance.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item px-5">
+              <div class="row align-items-center px-1">
+                <div class="col-6">
+                  <img src="images/gold.png" alt="gold"
+                    style="width: 100%; height: 400px; padding: 15px; object-fit: contain;">
+                </div>
+                <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                  <h2>
+                    Light Gold
+                  </h2>
+                  <p>A warm, luxurious hue that gives the phone a refined and high-end aesthetic.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item px-5">
+              <div class="row align-items-center px-1">
+                <div class="col-6">
+                  <img src="images/blue.png" alt="blue"
+                    style="width: 100%; height: 400px; padding: 15px; object-fit: contain;">
+                </div>
+                <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                  <h2>
+                    Sky Blue
+                  </h2>
+                  <p>A soft, cool-toned blue that feels calm and modern.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item px-5">
+              <div class="row align-items-center px-1">
+                <div class="col-6">
+                  <img src="images/black.png" alt="black"
+                    style="width: 100%; height: 400px; padding: 15px; object-fit: contain;">
+                </div>
+                <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                  <h2>
+                    Space Black
+                  </h2>
+                  <p>A timeless, classic shade that gives the phone a sleek and professional look.</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+
+          <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
     </div>
+
+
   </section>
 
-  <!-- Specification Section -->
-  <section id="#gallery">
+  <!-- Specifications Section -->
+  <section id="specifications">
     <div class="container-fluid">
-      
+
     </div>
   </section>
 
