--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
   <style>
     body {
       background-color: black;
+      padding-top: 50px;
     }
 
     .transparent-navbar {
-      background-color: rgba(255, 255, 255, 0.4);
+      background-color: rgba(48, 47, 47, 0.7);
       backdrop-filter: blur(10px);
-    }
-
-    .nav-link,
-    h2,
-    p {
-      color: white;
     }
 
     .styled-img {
       height: 300px;
       object-fit: contain;
       width: 100%;
+    }
+
+    .nav-link {
+      color: white !important;
+    }
+
+    .nav-link:hover,
+    .nav-link:active {
+      background-color: black;
     }
 
     /* carousel button */
@@ -48,9 +52,20 @@
       max-height: 400px;
     }
 
+    .table-dark {
+      background-color: transparent !important;
+    }
+
+    .table-dark th,
+    .table-dark td {
+      border-color: rgba(255, 255, 255, 0.3) !important;
+    }
+
     /* text responsiveness */
     @media (max-width: 1200px) {
-      #text {
+
+      #text,
+      tr {
         font-size: 1.1rem !important;
       }
 
@@ -58,15 +73,21 @@
         font-size: 1.5rem;
       }
 
+      .card-text {
+        font-size: 0.9rem !important;
+      }
+
+      .card-title {
+        font-size: 1.1rem !important;
+      }
+
       /* carousel image */
       .carousel-img {
         max-height: 300px;
       }
 
-      /* carousel padding */
-      .carousel-item {
-        padding-left: 0.5rem !important;
-        padding-right: 0.5rem !important;
+      .styled-img {
+        max-height: 200px;
       }
     }
 
@@ -74,19 +95,28 @@
     @media (max-width: 768px) {
 
       #text,
-      .nav-item {
+      .nav-item,
+      tr {
         font-size: 0.9rem !important;
       }
 
       h2 {
         font-size: 1.2rem;
       }
+
+      .card-text {
+        font-size: 0.8rem !important;
+      }
+
+      .card-title {
+        font-size: 1rem !important;
+      }
     }
   </style>
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-sm fixed-top mx-5 mt-3 py-2 px-4 rounded-4 transparent-navbar">
+<body class="text-white" data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="100" tabindex="0">
+  <nav class="navbar navbar-expand-sm fixed-top mx-5 mt-3 py-2 px-4 rounded-4 transparent-navbar navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" style="color:white;">iPhone Air</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -96,13 +126,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#overview">Overview</a>
+            <a class="nav-link rounded-pill px-3" aria-current="page" href="#overview">Overview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#gallery">Gallery</a>
+            <a class="nav-link rounded-pill px-3" href="#gallery">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#specifications">Specifications</a>
+            <a class="nav-link rounded-pill px-3" href="#specifications">Specifications</a>
           </li>
         </ul>
       </div>
@@ -127,108 +157,222 @@
   <section id="gallery">
     <div class="container-fluid text-center px-5">
       <h2>The thinnest iPhone ever made.</h2>
-      <img src="images/thin.png" alt="thin" class="img-fluid styled-img">
-      <p class="mt-2 mb-4" id="text" style="text-align:justify; font-size: 1.2rem">
-        The iPhone Air’s ultra-thin design makes it incredibly lightweight and comfortable to carry anywhere. Despite
-        its slim build, it delivers impressive performance and a premium feel that enhances everyday use.
-      </p>
+      <div class="card bg-transparent text-white mb-4">
+        <div class="card-body">
+          <div class="row align-items-center">
+            <div class="col-lg-6">
+              <p class="mt-3 mt-lg-0" id="text" style="text-align:justify; font-size: 1.2rem">
+                The iPhone Air’s ultra-thin design makes it incredibly lightweight and comfortable to carry anywhere.
+                Despite its slim build, it delivers impressive performance and a premium feel that enhances everyday
+                use.
+              </p>
+            </div>
+            <div class="col-lg-6 text-center">
+              <img src="images/thin.png" alt="thin" class="img-fluid styled-img">
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <div class="container-fluid mb-5">
-        <div id="galleryCarousel" class="carousel slide" data-bs-ride="false">
-          <div class="carousel-inner">
 
-            <div class="carousel-item active px-5">
-              <div class="row align-items-center">
-                <div class="col-7">
-                  <img src="images/air1.png" alt="colors" class="carousel-img">
-                </div>
-                <div class="col-5 d-flex" style="text-align:left;">
-                  <h2>
-                    Available in 4 different colors.
-                  </h2>
-                </div>
+
+    </div>
+
+    <div class="container-fluid">
+      <div id="galleryCarousel" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-inner">
+
+          <div class="carousel-item active px-5">
+            <div class="row align-items-center">
+              <div class="col-7">
+                <img src="images/air1.png" alt="colors" class="carousel-img">
+              </div>
+              <div class="col-5 d-flex" style="text-align:left;">
+                <h2>
+                  Available in 4 different colors.
+                </h2>
               </div>
             </div>
-
-            <div class="carousel-item px-5">
-              <div class="row align-items-center px-1">
-                <div class="col-6">
-                  <img src="images/white.png" alt="white" class="carousel-img">
-                </div>
-                <div class="col-6 d-flex flex-column" style="text-align:justify;">
-                  <h2>
-                    Cloud White
-                  </h2>
-                  <p id="text">Clean and minimalist, ideal for a simple yet elegant appearance.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="carousel-item px-5">
-              <div class="row align-items-center px-1">
-                <div class="col-6">
-                  <img src="images/gold.png" alt="gold" class="carousel-img">
-                </div>
-                <div class="col-6 d-flex flex-column" style="text-align:justify;">
-                  <h2>
-                    Light Gold
-                  </h2>
-                  <p id="text">A warm, luxurious hue that gives the phone a refined and high-end aesthetic.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="carousel-item px-5">
-              <div class="row align-items-center px-1">
-                <div class="col-6">
-                  <img src="images/blue.png" alt="blue" class="carousel-img">
-                </div>
-                <div class="col-6 d-flex flex-column" style="text-align:justify;">
-                  <h2>
-                    Sky Blue
-                  </h2>
-                  <p id="text">A soft, cool-toned blue that feels calm and modern.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="carousel-item px-5">
-              <div class="row align-items-center px-1">
-                <div class="col-6">
-                  <img src="images/black.png" alt="black" class="carousel-img">
-                </div>
-                <div class="col-6 d-flex flex-column" style="text-align:justify;">
-                  <h2>
-                    Space Black
-                  </h2>
-                  <p id="text">A timeless, classic shade that gives the phone a sleek and professional look.</p>
-                </div>
-              </div>
-            </div>
-
           </div>
 
-          <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
+          <div class="carousel-item px-5">
+            <div class="row align-items-center px-1">
+              <div class="col-6">
+                <img src="images/white.png" alt="white" class="carousel-img">
+              </div>
+              <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                <h2>
+                  Cloud White
+                </h2>
+                <p id="text">Clean and minimalist, ideal for a simple yet elegant appearance.</p>
+              </div>
+            </div>
+          </div>
 
-          <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="carousel-item px-5">
+            <div class="row align-items-center px-1">
+              <div class="col-6">
+                <img src="images/gold.png" alt="gold" class="carousel-img">
+              </div>
+              <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                <h2>
+                  Light Gold
+                </h2>
+                <p id="text">A warm, luxurious hue that gives the phone a refined and high-end aesthetic.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item px-5">
+            <div class="row align-items-center px-1">
+              <div class="col-6">
+                <img src="images/blue.png" alt="blue" class="carousel-img">
+              </div>
+              <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                <h2>
+                  Sky Blue
+                </h2>
+                <p id="text">A soft, cool-toned blue that feels calm and modern.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item px-5">
+            <div class="row align-items-center px-1">
+              <div class="col-6">
+                <img src="images/black.png" alt="black" class="carousel-img">
+              </div>
+              <div class="col-6 d-flex flex-column" style="text-align:justify;">
+                <h2>
+                  Space Black
+                </h2>
+                <p id="text">A timeless, classic shade that gives the phone a sleek and professional look.</p>
+              </div>
+            </div>
+          </div>
 
         </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+
       </div>
     </div>
   </section>
 
   <!-- Specifications Section -->
-  <section id="specifications">
-    <div class="container-fluid">
+  <section id="specifications" class="py-5">
+    <div class="container-fluid px-5">
+      <h2 class="text-center mb-4">Specifications</h2>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
 
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3">
+                <img src="images/spec1.png" class="img-fluid p-2" alt="Display">
+              </div>
+              <div class="col-9">
+                <div class="card-body">
+                  <h5 class="card-title">lorem</h5>
+                  <p class="card-text">ipsum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3">
+                <img src="images/spec2.png" class="img-fluid p-2" alt="Camera">
+              </div>
+              <div class="col-9">
+                <div class="card-body">
+                  <h5 class="card-title">lorem</h5>
+                  <p class="card-text">ipsum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3">
+                <img src="images/spec3.png" class="img-fluid p-2" alt="Chip">
+              </div>
+              <div class="col-9">
+                <div class="card-body">
+                  <h5 class="card-title">lorem</h5>
+                  <p class="card-text">ipsum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3">
+                <img src="images/spec4.png" class="img-fluid p-2" alt="Battery">
+              </div>
+              <div class="col-9">
+                <div class="card-body">
+                  <h5 class="card-title">lorem</h5>
+                  <p class="card-text">ipsum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3">
+                <img src="images/spec5.png" class="img-fluid p-2" alt="Storage">
+              </div>
+              <div class="col-9">
+                <div class="card-body">
+                  <h5 class="card-title">lorem</h5>
+                  <p class="card-text">ipsum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3">
+                <img src="images/spec6.png" class="img-fluid p-2" alt="Build">
+              </div>
+              <div class="col-9">
+                <div class="card-body">
+                  <h5 class="card-title">lorem</h5>
+                  <p class="card-text">ipsum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
