--- a/index.html
+++ b/index.html
@@ -61,10 +61,21 @@
       border-color: rgba(255, 255, 255, 0.3) !important;
     }
 
+    #specifications .card img {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+      background-color: white;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     /* text responsiveness */
     @media (max-width: 1200px) {
 
-      #text,
+      .text,
       tr {
         font-size: 1.1rem !important;
       }
@@ -89,12 +100,17 @@
       .styled-img {
         max-height: 200px;
       }
+
+      #specifications .card img {
+        width: 70px;
+        height: 70px;
+      }
     }
 
 
     @media (max-width: 768px) {
 
-      #text,
+      .text,
       .nav-item,
       tr {
         font-size: 0.9rem !important;
@@ -110,6 +126,11 @@
 
       .card-title {
         font-size: 1rem !important;
+      }
+
+      #specifications .card img {
+        width: 60px;
+        height: 60px;
       }
     }
   </style>
@@ -143,7 +164,7 @@
   <section id="overview" class="text-center">
     <div class="container-fluid mb-5">
       <img src="images/air.png" alt="iPhone Air Overview" class="img-fluid">
-      <p class="px-5" id="text" style="text-align:justify; font-size: 1.2rem">
+      <p class="px-5 text" style="text-align:justify; font-size: 1.2rem">
         The iPhone 17 introduces a sleek new design with a 6.3-inch Super Retina XDR OLED display that supports
         ProMotion up to 120 Hz and an Always-On feature. It runs on the powerful A19 chip, offering faster performance
         and improved efficiency. The phone includes dual 48-megapixel rear cameras and an 18-megapixel front camera,
@@ -161,7 +182,7 @@
         <div class="card-body">
           <div class="row align-items-center">
             <div class="col-lg-6">
-              <p class="mt-3 mt-lg-0" id="text" style="text-align:justify; font-size: 1.2rem">
+              <p class="mt-3 mt-lg-0 text" style="text-align:justify; font-size: 1.2rem">
                 The iPhone Air’s ultra-thin design makes it incredibly lightweight and comfortable to carry anywhere.
                 Despite its slim build, it delivers impressive performance and a premium feel that enhances everyday
                 use.
@@ -204,7 +225,7 @@
                 <h2>
                   Cloud White
                 </h2>
-                <p id="text">Clean and minimalist, ideal for a simple yet elegant appearance.</p>
+                <p class="text">Clean and minimalist, ideal for a simple yet elegant appearance.</p>
               </div>
             </div>
           </div>
@@ -218,7 +239,7 @@
                 <h2>
                   Light Gold
                 </h2>
-                <p id="text">A warm, luxurious hue that gives the phone a refined and high-end aesthetic.</p>
+                <p class="text">A warm, luxurious hue that gives the phone a refined and high-end aesthetic.</p>
               </div>
             </div>
           </div>
@@ -232,7 +253,7 @@
                 <h2>
                   Sky Blue
                 </h2>
-                <p id="text">A soft, cool-toned blue that feels calm and modern.</p>
+                <p class="text">A soft, cool-toned blue that feels calm and modern.</p>
               </div>
             </div>
           </div>
@@ -246,7 +267,7 @@
                 <h2>
                   Space Black
                 </h2>
-                <p id="text">A timeless, classic shade that gives the phone a sleek and professional look.</p>
+                <p class="text">A timeless, classic shade that gives the phone a sleek and professional look.</p>
               </div>
             </div>
           </div>
@@ -276,13 +297,14 @@
         <div class="col">
           <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
             <div class="row g-0 align-items-center">
-              <div class="col-3">
-                <img src="images/spec1.png" class="img-fluid p-2" alt="Display">
+              <div class="col-3 col-xl-2">
+                <img src="images/display.png" class="img-fluid p-2 mx-4" alt="Display">
               </div>
-              <div class="col-9">
+              <div class="col-9 col-xl-10 ps-md-2 ps-1">
                 <div class="card-body">
-                  <h5 class="card-title">lorem</h5>
-                  <p class="card-text">ipsum</p>
+                  <h5 class="card-title">6.5-inch display</h5>
+                  <p class="card-text">Enjoy a vivid 6.5-inch ProMotion display with 120Hz refresh rate, tough Ceramic
+                    Shield 2 protection, and an ultrathin titanium design.</p>
                 </div>
               </div>
             </div>
@@ -292,13 +314,14 @@
         <div class="col">
           <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
             <div class="row g-0 align-items-center">
-              <div class="col-3">
-                <img src="images/spec2.png" class="img-fluid p-2" alt="Camera">
+              <div class="col-3 col-xl-2">
+                <img src="images/front.png" class="img-fluid p-2 mx-4" alt="Front cam">
               </div>
-              <div class="col-9">
+              <div class="col-9 col-xl-10 ps-md-2 ps-1">
                 <div class="card-body">
-                  <h5 class="card-title">lorem</h5>
-                  <p class="card-text">ipsum</p>
+                  <h5 class="card-title">Front Camera</h5>
+                  <p class="card-text">Capture every detail with the 18MP Center Stage front camera—perfect for smart
+                    group selfies, flexible framing, and Dual Capture videos.</p>
                 </div>
               </div>
             </div>
@@ -308,13 +331,14 @@
         <div class="col">
           <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
             <div class="row g-0 align-items-center">
-              <div class="col-3">
-                <img src="images/spec3.png" class="img-fluid p-2" alt="Chip">
+              <div class="col-3 col-xl-2">
+                <img src="images/back.png" class="img-fluid p-2 mx-4" alt="Back cam">
               </div>
-              <div class="col-9">
+              <div class="col-9 col-xl-10 ps-md-2 ps-1">
                 <div class="card-body">
-                  <h5 class="card-title">lorem</h5>
-                  <p class="card-text">ipsum</p>
+                  <h5 class="card-title">Back Camera</h5>
+                  <p class="card-text">Shoot like a pro with the 48MP Fusion main camera featuring 2x optical-quality
+                    zoom for crisp, high-end photography in any scene.</p>
                 </div>
               </div>
             </div>
@@ -324,13 +348,14 @@
         <div class="col">
           <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
             <div class="row g-0 align-items-center">
-              <div class="col-3">
-                <img src="images/spec4.png" class="img-fluid p-2" alt="Battery">
+              <div class="col-3 col-xl-2">
+                <img src="images/chip.png" class="img-fluid p-2 mx-4" alt="Chip">
               </div>
-              <div class="col-9">
+              <div class="col-9 col-xl-10 ps-md-2 ps-1">
                 <div class="card-body">
-                  <h5 class="card-title">lorem</h5>
-                  <p class="card-text">ipsum</p>
+                  <h5 class="card-title">A19 Chip</h5>
+                  <p class="card-text">Powered by the A19 Pro chip with a 5-core GPU, delivering exceptional speed,
+                    smooth multitasking, and console-level gaming performance.</p>
                 </div>
               </div>
             </div>
@@ -340,13 +365,14 @@
         <div class="col">
           <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
             <div class="row g-0 align-items-center">
-              <div class="col-3">
-                <img src="images/spec5.png" class="img-fluid p-2" alt="Storage">
+              <div class="col-3 col-xl-2">
+                <img src="images/batt.png" class="img-fluid p-2 mx-4" alt="Battery">
               </div>
-              <div class="col-9">
+              <div class="col-9 col-xl-10 ps-md-2 ps-1">
                 <div class="card-body">
-                  <h5 class="card-title">lorem</h5>
-                  <p class="card-text">ipsum</p>
+                  <h5 class="card-title">Battery</h5>
+                  <p class="card-text">Enjoy all-day power with up to 27 hours of video playback—reliable endurance for
+                    everything you do.</p>
                 </div>
               </div>
             </div>
@@ -356,13 +382,14 @@
         <div class="col">
           <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
             <div class="row g-0 align-items-center">
-              <div class="col-3">
-                <img src="images/spec6.png" class="img-fluid p-2" alt="Build">
+              <div class="col-3 col-xl-2">
+                <img src="images/ios.png" class="img-fluid p-2 my-2 mx-4" alt="Apple Intelligence">
               </div>
-              <div class="col-9">
+              <div class="col-9 col-xl-10 ps-md-2 ps-1">
                 <div class="card-body">
-                  <h5 class="card-title">lorem</h5>
-                  <p class="card-text">ipsum</p>
+                  <h5 class="card-title">Apple Intelligence</h5>
+                  <p class="card-text">Runs on iOS built for Apple Intelligence—bringing a fresh design, smarter
+                    experiences, and more magical capabilities than ever.</p>
                 </div>
               </div>
             </div>
