more specs added

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
     <div class="container-fluid mb-5">
       <img src="images/air.png" alt="iPhone Air Overview" class="img-fluid">
       <p class="px-5 text" style="text-align:justify; font-size: 1.2rem">
-        The iPhone 17 introduces a sleek new design with a 6.3-inch Super Retina XDR OLED display that supports
-        ProMotion up to 120 Hz and an Always-On feature. It runs on the powerful A19 chip, offering faster performance
-        and improved efficiency. The phone includes dual 48-megapixel rear cameras and an 18-megapixel front camera,
-        providing excellent photo and video quality. With iOS 26, larger base storage starting at 256 GB, and a
-        lightweight aluminum body, the iPhone 17 delivers premium features once reserved for “Pro” models.
+        The iPhone Air combines powerful performance with an ultrathin, lightweight titanium design. Its 6.5-inch
+        ProMotion display delivers vibrant visuals and smooth responsiveness, protected by the durable Ceramic Shield 2.
+        Capture stunning photos and videos with the 48MP main camera and 18MP front camera, both enhanced for creativity
+        and clarity. Powered by the A19 Pro chip, it handles demanding tasks and gaming with ease. Built on iOS with
+        Apple Intelligence, the iPhone Air offers a smarter, more intuitive experience every day.
       </p>
     </div>
   </section>
@@ -300,7 +300,7 @@
               <div class="col-3 col-xl-2">
                 <img src="images/display.png" class="img-fluid p-2 mx-4" alt="Display">
               </div>
-              <div class="col-9 col-xl-10 ps-md-2 ps-1">
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
                 <div class="card-body">
                   <h5 class="card-title">6.5-inch display</h5>
                   <p class="card-text">Enjoy a vivid 6.5-inch ProMotion display with 120Hz refresh rate, tough Ceramic
@@ -317,7 +317,7 @@
               <div class="col-3 col-xl-2">
                 <img src="images/front.png" class="img-fluid p-2 mx-4" alt="Front cam">
               </div>
-              <div class="col-9 col-xl-10 ps-md-2 ps-1">
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
                 <div class="card-body">
                   <h5 class="card-title">Front Camera</h5>
                   <p class="card-text">Capture every detail with the 18MP Center Stage front camera—perfect for smart
@@ -334,7 +334,7 @@
               <div class="col-3 col-xl-2">
                 <img src="images/back.png" class="img-fluid p-2 mx-4" alt="Back cam">
               </div>
-              <div class="col-9 col-xl-10 ps-md-2 ps-1">
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
                 <div class="card-body">
                   <h5 class="card-title">Back Camera</h5>
                   <p class="card-text">Shoot like a pro with the 48MP Fusion main camera featuring 2x optical-quality
@@ -351,7 +351,7 @@
               <div class="col-3 col-xl-2">
                 <img src="images/chip.png" class="img-fluid p-2 mx-4" alt="Chip">
               </div>
-              <div class="col-9 col-xl-10 ps-md-2 ps-1">
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
                 <div class="card-body">
                   <h5 class="card-title">A19 Chip</h5>
                   <p class="card-text">Powered by the A19 Pro chip with a 5-core GPU, delivering exceptional speed,
@@ -368,7 +368,7 @@
               <div class="col-3 col-xl-2">
                 <img src="images/batt.png" class="img-fluid p-2 mx-4" alt="Battery">
               </div>
-              <div class="col-9 col-xl-10 ps-md-2 ps-1">
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
                 <div class="card-body">
                   <h5 class="card-title">Battery</h5>
                   <p class="card-text">Enjoy all-day power with up to 27 hours of video playback—reliable endurance for
@@ -385,7 +385,7 @@
               <div class="col-3 col-xl-2">
                 <img src="images/ios.png" class="img-fluid p-2 my-2 mx-4" alt="Apple Intelligence">
               </div>
-              <div class="col-9 col-xl-10 ps-md-2 ps-1">
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
                 <div class="card-body">
                   <h5 class="card-title">Apple Intelligence</h5>
                   <p class="card-text">Runs on iOS built for Apple Intelligence—bringing a fresh design, smarter
@@ -395,6 +395,41 @@
             </div>
           </div>
         </div>
+
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3 col-xl-2">
+                <img src="images/storage.png" class="img-fluid p-2 mx-4" alt="Storage">
+              </div>
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
+                <div class="card-body">
+                  <h5 class="card-title">Storage Options</h5>
+                  <p class="card-text">Available in 256GB, 512GB, and 1TB configurations—ample space for apps, photos,
+                    and 4K video projects.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card py-1 bg-transparent text-white border border-secondary fixed-card">
+            <div class="row g-0 align-items-center">
+              <div class="col-3 col-xl-2">
+                <img src="images/sim.png" class="img-fluid p-2 mx-4" alt="sim">
+              </div>
+              <div class="col-9 col-xl-10 ps-lg-3 ps-md-2 ps-1">
+                <div class="card-body">
+                  <h5 class="card-title">eSim</h5>
+                  <p class="card-text">Experience flexible and secure connectivity with eSIM, allowing you to activate
+                    or switch networks seamlessly—no physical SIM card required.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
