--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>iPhone Air</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
     body {
@@ -75,6 +76,19 @@
 
     .custom-card {
       background-color: rgba(48, 47, 47, 0.4);
+    }
+
+    .btn-light {
+      background-color: white;
+      color: black;
+      border: none;
+      transition: all 0.3s ease;
+    }
+
+    .btn-light:hover {
+      background-color: #ccc;
+      color: black;
+      transform: scale(1.05);
     }
 
     /* text responsiveness */
@@ -309,9 +323,19 @@
       <div class="row g-4 mb-4 align-items-stretch">
 
         <!-- Card 1 -->
-        <div class="col-12 col-sm-4">
+        <div class="col-6 col-sm-3">
           <div class="card custom-card text-white border border-secondary">
-            <img src="images/box.png"class="card-img-top transparent-img p-3" alt="box">
+            <img src="images/ceramic.png" class="card-img-top transparent-img p-3" alt="ceramic">
+            <div class="card-body">
+              <p class="card-title">Ceramic Shield</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-6 col-sm-3">
+          <div class="card custom-card text-white border border-secondary">
+            <img src="images/box.png" class="card-img-top transparent-img p-3" alt="box">
             <div class="card-body">
               <p class="card-title">What's in the box?</p>
             </div>
@@ -319,7 +343,7 @@
         </div>
 
         <!-- Card 2 -->
-        <div class="col-6 col-sm-4">
+        <div class="col-6 col-sm-3">
           <div class="card custom-card text-white border border-secondary">
             <img src="images/magsafe.png" class="card-img-top transparent-img p-3" alt="magsafe">
             <div class="card-body">
@@ -329,7 +353,7 @@
         </div>
 
         <!-- Card 3 -->
-        <div class="col-6 col-sm-4">
+        <div class="col-6 col-sm-3">
           <div class="card custom-card text-white border border-secondary">
             <img src="images/crossbody.png" class="card-img-top transparent-img p-3" alt="crossbody">
             <div class="card-body">
@@ -338,7 +362,7 @@
           </div>
         </div>
       </div>
-      
+
     </div>
   </section>
 
@@ -488,7 +512,36 @@
     </div>
   </section>
 
+  <!-- Buy Now Button Section -->
+  <div class="text-center mb-5">
+    <a href="https://powermaccenter.com/products/iphone-air-mg2p4x-a" target="_blank"
+      class="btn btn-light px-5 py-2 rounded-pill fw-semibold d-inline-flex align-items-center gap-2">
+      <i class="bi bi-cart-fill"></i>
+      Buy Now
+    </a>
+  </div>
 
+<!-- Footer -->
+<footer class="text-white py-md-4 py-3" style="background-color: rgba(48, 47, 47, 0.7);">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <div class="col-6 text-center text-md-center mb-2 mb-md-0">
+        <p class="mb-0">© 2025 iPhone Air. All rights reserved.</p>
+      </div>
+
+      <div class="col-6 text-center text-md-center">
+        <p class="mb-1">Follow Us:</p>
+        <div class="d-flex justify-content-center justify-content-md-center gap-3">
+          <i class="bi bi-facebook"></i>
+          <i class="bi bi-twitter"></i>
+          <i class="bi bi-instagram"></i>
+          <i class="bi bi-youtube"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
