margins adjusted on gallery section

--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
       </div>
 
       <!-- Row 1 -->
-      <div class="row g-4 mb-4 align-items-stretch">
+      <div class="row g-4 mb-4 align-items-stretch justify-content-center mx-lg-5 mx-md-3 mx-sm-1">
 
         <!-- Card 1 -->
-        <div class="col-12 col-md-6">
+        <div class="col-10 col-md-6">
           <div class="card custom-card text-white border border-secondary h-100">
             <img src="images/p1.png" class="card-img-top transparent-img p-3" alt="Thin Design">
             <div class="card-body">
@@ -323,7 +323,7 @@
       </div>
 
       <!-- Row 2 -->
-      <div class="row g-4 mb-4 align-items-stretch">
+      <div class="row g-4 mb-4 align-items-stretch mx-lg-5 mx-md-3 mx-sm-1">
 
         <!-- Card 1 -->
         <div class="col-6 col-sm-3">
