--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section id="overview" class="text-center">
     <div class="container-fluid mb-5">
       <img src="images/air.png" alt="iPhone Air Overview" class="img-fluid">
-      <p class="px-lg-5 px-md-4 px-3 text" style="text-align:justify; font-size: 1.2rem">
+      <p class="px-lg-5 px-md-4 px-3 lead" style="text-align:justify;">
         The iPhone Air combines powerful performance with an ultrathin, lightweight titanium design. Its 6.5-inch
         ProMotion display delivers vibrant visuals and smooth responsiveness, protected by the durable Ceramic Shield 2.
         Capture stunning photos and videos with the 48MP main camera and 18MP front camera, both enhanced for creativity
